tests/NormalTests/paczka1/fuzzy1/95723780.err
Error in line 3: UGTZD A288 82,7
Error in line 4: B5Xbwn6y A288 35,8
